--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@colsen1991/ngx-translate-extract-marker": "^2.0.8",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "aos": "^2.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
